# zeromq_trader_microservice

./: CMakeLists.txt  LICENSE  README.md  cmake_build.sh
googleprotobuff/: messages.proto
src/: ByteVector.h  IMessage.h  ITraderEvent.h  ITransport.h  ThreadActivityTrigger.h  TraderDataSubscriber.cpp  TraderDataSubscriber.h  TraderEngine.cpp  TraderEngine.h  ZMQTransport.cpp  ZMQTransport.h  messages.pb.cpp  messages.pb.h  trader_rating.cpp  zhelpers.h
